--- a/index.html
+++ b/index.html
@@ -116,6 +116,6 @@
 </body>
 <script src="./script/script.js"></script>
 <script src="./script/modal.js"></script>
-<script src="./app.js"></script>
+<script src="app.js"></script>
 
 </html>
