--- a/index-eng.html
+++ b/index-eng.html
@@ -79,7 +79,7 @@
     <h1 class="app__heading">An application to counter Russian aggression</h1>
     <div class="stats__block">
       <p class="number_of_requests">
-        Number of GET requests: <span id="totalerrors">0</span>
+        Number of requests: <span id="totalerrors">0</span>
       </p>
       <p class="number_of_requests error">
         Number of errors: <span id="totalrequests">0</span>
