--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <h1 class="app__heading">Додаток протидії російської агресії</h1>
     <div class="stats__block">
       <p class="number_of_requests">
-        Кількість GET запросів: <span id="totalerrors">0</span>
+        Кількість запросів: <span id="totalerrors">0</span>
       </p>
       <p class="number_of_requests error">
         Кількість помилок: <span id="totalrequests">0</span>
