--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="theme-color" content="#f7f2ee"/>
-  <meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="mobile-web-app-capable" content="yes">
+  <!-- <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="mobile-web-app-capable" content="yes"> -->
   <title>StopRussianWar</title>
   <link rel="stylesheet" href="./style.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -15,7 +15,7 @@
     <link rel="manifest" href="manifest.json">
 
 <link rel="apple-touch-icon" sizes="192x192" href="img/maskable_icon_x192.png">
-<link rel="apple-touch-startup-image" href="/img/maskable_icon_x192.png">
+<!-- <link rel="apple-touch-startup-image" href="/img/maskable_icon_x192.png"> -->
 <meta name="apple-mobile-web-app-title" content="StopRussianWar">
 
 
