--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
     <link rel="manifest" href="manifest.json">
 
-<link rel="apple-touch-icon" sizes="192x192" href="img/maskable_icon_x192.png">
-<!-- <link rel="apple-touch-startup-image" href="/img/maskable_icon_x192.png"> -->
+<link rel="apple-touch-icon" sizes="192x192" href="/img/maskable_icon_x192.png">
+<link rel="apple-touch-startup-image" href="/img/maskable_icon_x192.png">
 <meta name="apple-mobile-web-app-title" content="StopRussianWar">
 
 
