Small fix text on layout

--- a/index-eng.html
+++ b/index-eng.html
@@ -30,10 +30,7 @@
         </div>
         <div class="modal-body">
           <p>
-            Participation in this application is not legal. Click "Continue" if
-            you want to support Ukraine in the destruction of Russians and Belarusians
-            propaganda news, government, military and banking
-            sites.
+            The application is used exclusively for testing your site and checking the performance of your application. <br> The application should be used exclusively for scientific purposes and for testing purposes.
           </p>
         </div>
         <div class="modal-footer">
@@ -79,7 +76,7 @@
       <button class="button show_banned" onclick="openBannedSited()">Show banned sites</button>
       <button class="button download">Phone application</button>
     </div>
-    <h1 class="app__heading">An application to counter Russian aggression</h1>
+    <h1 class="app__heading">Website testing applicationn</h1>
     <div class="stats__block">
       <p class="number_of_requests">
         Number of requests: <span id="totalerrors">0</span>
