--- a/index.html
+++ b/index.html
@@ -37,10 +37,7 @@
         </div>
         <div class="modal-body">
           <p>
-            Участь в цьому додатка не є законною. Натисніть «Продовжити», якщо
-            ви хочете підтримати Україну у знищенні російських та білоруських
-            пропагандистських новин, урядових, військових та банківських
-            сайтів.
+            Додаток використовується виключно для тестування вашого сайту, та перевірки продуктивності вашого додатку. <br> Додаток слід використовувати виключно в научних цілях, та в цілях тестування.
           </p>
         </div>
         <div class="modal-footer">
@@ -83,10 +80,10 @@
         </button>
       </div>
 
-      <button class="button show_banned" onclick="openBannedSited()">Показати забанені сайти</button>
+      <button class="button show_banned" onclick="openBannedSited()">Список тестованих сайтів</button>
       <button class="button download">Додаток на телефон</button>
     </div>
-    <h1 class="app__heading">Додаток протидії російської агресії</h1>
+    <h1 class="app__heading">Додаток тестування сайтів</h1>
     <div class="stats__block">
       <p class="number_of_requests">
         Кількість запросів: <span id="totalerrors">0</span>
